@@ -191,7 +191,8 @@ Chronological list of authors
   - Sukeerti T
   - Robot Jelly
   - Mark Verma
-  
+  - Marcelo D. Poleto
+
 
 External code
 -------------
