@@ -24,10 +24,11 @@ from collections import OrderedDict
 
 import pytest
 from numpy.testing import (
-    assert_equal,
+    assert_equal,assert_allclose
 )
 
 import MDAnalysis as mda
+import os
 
 from MDAnalysisTests.datafiles import CRD
 from MDAnalysisTests import make_Universe
@@ -40,7 +41,7 @@ class TestCRDWriter(object):
 
     @pytest.fixture()
     def outfile(self, tmpdir):
-        return str(tmpdir) + '/out.crd'
+        return os.path.join(str(tmpdir), 'test.crd')
 
     def test_write_atoms(self, u, outfile):
         # Test that written file when read gives same coordinates
@@ -66,11 +67,35 @@ class TestCRDWriter(object):
         for ref, other in zip(CRD_iter(CRD), CRD_iter(outfile)):
             assert ref == other
 
-    def test_write_EXT(self):
-        # TODO: Write tests that use EXT output format
-        # Must have *lots* of atoms, maybe fake the system
-        # to make tests faster
-        pass
+    def test_write_EXT(self, u, outfile):
+        # Use the `extended` keyword to force the EXT format
+        u.atoms.write(outfile, extended=True)
+
+        with open(outfile, 'r') as inf:
+            format_line = inf.readlines()[2]
+        assert 'EXT' in format_line, "EXT format expected"
+
+    def test_write_EXT_read(self, u, outfile):
+        # Read EXT format and check atom positions
+        u.atoms.write(outfile, extended=True)
+
+        u2 = mda.Universe(outfile)
+
+        sel1 = u.select_atoms('all')
+        sel2 = u2.select_atoms('all')
+
+        cog1 = sel1.center_of_geometry()
+        cog2 = sel2.center_of_geometry()
+
+        assert_equal(len(u.atoms), len(u2.atoms)), 'Equal number of '\
+                'atoms expected in both CRD formats'
+        assert_equal(len(u.atoms.residues),
+            len(u2.atoms.residues)), 'Equal number of residues expected in'\
+                        'both CRD formats'
+        assert_equal(len(u.atoms.segments), 
+            len(u2.atoms.segments)), 'Equal number of segments expected in'\
+                        'both CRD formats'
+        assert_allclose(cog1, cog2, rtol=1e-6, atol=0), 'Same centroid expected for both CRD formats'
 
 
 class TestCRDWriterMissingAttrs(object):
